@@ -676,6 +676,8 @@ library:
 @tab .fli/.flc files
 @item Sierra VMD       @tab    @tab X
 @tab used in Sierra CD-ROM games
+@item Sierra Online    @tab    @tab X
+@tab .sol files used in Sierra Online games
 @item Matroska         @tab    @tab X
 @end multitable
 
@@ -742,6 +744,7 @@ following image formats are supported:
 @item Apple Animation        @tab     @tab  X @tab fourcc: 'rle '
 @item Apple Graphics         @tab     @tab  X @tab fourcc: 'smc '
 @item Apple Video            @tab     @tab  X @tab fourcc: rpza
+@item Apple QuickDraw        @tab     @tab  X @tab fourcc: qdrw
 @item Cinepak                @tab     @tab  X
 @item Microsoft RLE          @tab     @tab  X
 @item Microsoft Video-1      @tab     @tab  X
@@ -812,6 +815,8 @@ solutions.
 @tab used in various Interplay computer games
 @item Xan DPCM               @tab      @tab X
 @tab used in Origin's Wing Commander IV AVI files
+@item Sierra Online DPCM     @tab      @tab X
+@tab used in Sierra Online game audio files
 @item Apple MACE 3           @tab      @tab X
 @item Apple MACE 6           @tab      @tab X
 @item FLAC                   @tab      @tab X
